# tubgerm

./: Cargo.toml
src/: main.rs
src/core/: app.rs  event.rs  fetch.rs  mod.rs  user_data.rs
src/services/: audio.rs  cache.rs  client.rs  config.rs  keyring.rs  lyrics.rs  mod.rs
src/services/config/: config.rs  config_data.rs  mod.rs
src/services/subsonic/: client.rs
src/ui/: library.rs  login_form.rs  main_view.rs  mod.rs  runtime.rs  tui.rs  ui.rs
src/ux/: mod.rs
