[package]
name = "tubgerm"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
rand = "0.10.0"
ratatui = "0.30.0"
ratatui-image = "10.0.6"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
zeroize = "1.8.2"
keyring = { version = "3.6.3", features = [
  "apple-native",
  "linux-native",
  "windows-native",
] }
url-normalizer = "0.2.0"
submarine = { version = "0.1.1", features = ["navidrome"] }
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
toml = "1.0.6"
config = "0.15.21"
ratatui-textarea = "0.8.0"
ratatui-notifications = "0.1.0"
enum-iterator = "2.3.0"
rodio = "0.22.2"
